--- a/app/templates/array.html.j2
+++ b/app/templates/array.html.j2
@@ -1,3 +1,2 @@
-{% for envname in envs %}
-    <pre>{{ envname }} -> {{ envs[envname] }}</pre>
+{% for envname in envs %}{{ envname }} -> {{ envs[envname] }}
 {% endfor %}
